Slightly lighten ansi-bg-red to ensure sufficient contrast

--- a/src/Aspire.Dashboard/Components/Controls/LogViewer.razor.css
+++ b/src/Aspire.Dashboard/Components/Controls/LogViewer.razor.css
@@ -177,7 +177,7 @@
 }
 
 ::deep .ansi-bg-red {
-    background-color: #C50F1F;
+    background-color: #f80f24;
 }
 
 ::deep .ansi-bg-white {
